--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 	<script>
-		document.getElementById("henrique").innerText = "Yo"
+		document.getElementById("test").innerText = "Yo"
 	</script>
 	<div id="test">Henrique</div>
 </body>
